--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-:root {
+:root { /*root*/
     --cor-verde-barra: rgba(26, 61, 27, 0.8);
     --cor-verde: #1a3d1b;
     --cor-branca-barra: rgba(255,255,255, 0.7);
